test/core/errors/enumeration_types_error/zs/bool_enum_value_error.zs
package bool_enum_value_error;

enum uint8 BoolEnumValueEnum
{
    NONE       = 000b,
    DARK_RED   = 001b,
    DARK_BLUE  = false,
    DARK_BLACK = 111b
};
